[project]
name = "scrapy-impersonate-rnet"
version = "0.1.1"
description = "Scrapy download handler that routes requests through rnet for browser-grade TLS/HTTP2 fingerprinting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["scrapy", "rnet", "tls", "fingerprint", "impersonate", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "rnet>=2.4.2",
    "scrapy>=2.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapy_rnet"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
